<resources>
    <string name="app_name">Vinilos</string>
    <string name="title_albumes">Álbumes</string>
    <string name="title_artistas">Artistas</string>
    <string name="title_coleccionistas">Coleccionistas</string>
    <string name="great">¡Genial!</string>
    <string name="newAlbum">Nuevo Álbum</string>
    <string name="allAlbums">Todos los Álbumes </string>
    <string name="title_activity_album_details">Detalle del álbum</string>
    <string name="title_activity_artist_details">Detalle del artista</string>
    <string name="collectors_title">Coleccionistas</string>
    <string name="musicians_title">Artistas</string>
    <string name="buscar_hint">Buscar</string>
    <string name="secondary_artist_title">Bio</string>
    <string name="title_new_album">Nuevo álbum</string>
    <string name="url_cover_album_hint">Ingrese la URL del cover</string>
    <string name="select_album_date_hint">Lanzamiento</string>
    <string name="album_name_hint">Nombre</string>
    <string name="album_description_hint">Descripción</string>
    <string name="album_genre_promp">Género</string>
    <string name="album_record_label_promp">Disquera</string>
    <string name="text_button_save_album">Guardar</string>
    <string name="text_button_cancel_album">Cancelar</string>
    <string name="associate_track_text_button">Asociar tracks al Álbum</string>
    <string name="album_content_description">Album</string>
    <string name="content_description_for_parent_content_linear_layout">Descripción del contenido para el diseño lineal principal</string>
    <string name="toolbar_description">Back</string>
    <string name="collectors_title_description">Coleccionistas</string>

    <string-array name="musical_genres">
        <item>Seleccione un Género</item>
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string-array name="musical_record_labels">
        <item>Seleccione una disquera</item>
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>

</resources>