<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newAlbum.newAlbumActivity"
    android:background="@color/black">

    <include
        android:id="@+id/toolbar"
        layout="@layout/vynils_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="5dp"

        android:orientation="vertical">
        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/default_image"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/coverUrlText"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorEditText"
            android:paddingStart="5dp"
            android:background="@color/backgroundEditText"
            android:hint="@string/url_cover_album_hint"/>

        <EditText
            android:id="@+id/editTextAlbumName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/album_name_hint"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorEditText"
            android:paddingStart="5dp"
            android:background="@drawable/rounded_edittext"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/editTextDateRelease"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="48dp"
                android:hint="@string/select_album_date_hint"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorEditText"
                android:paddingStart="5dp"
                android:onClick="showDatePickerDialog"
                android:background="@drawable/rounded_edittext"/>
            <Button
                android:id="@+id/calendarButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:onClick="showDatePickerDialog"
                android:text="Calendario"
                android:drawableRight="@drawable/calendar"/>

        </LinearLayout>




        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_description_hint"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorEditText"
            android:background="@drawable/rounded_edittext"
            android:paddingTop="5dp"
            android:gravity="top"
            android:paddingStart="5dp"
            android:minLines="5"/>

        <Spinner
            android:id="@+id/spinnerGenreList"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:prompt="@string/album_genre_promp"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/spinnerRecordLabelList"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:prompt="@string/album_record_label_promp"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="10dp"/>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancelAlbumButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginRight="2dp"
                android:background="@color/colorEditText"
                android:textColor="@color/white"
                android:text="@string/text_button_cancel_album"/>

            <Button
                android:id="@+id/saveAlbumButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="#2DE0E0"
                android:textColor="@color/colorSelected"

                android:text="@string/text_button_save_album"/>


        </LinearLayout>




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>