<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tsdc_vynils_app.app.ui.home.HomeFragment"
        android:label="@string/title_albumes"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/actionHomeFragmentToAlbumDetailsActivity"
            app:destination="@id/albumDetailsActivity">
        <argument
            android:name="albumId"
            app:argType="integer"
            android:defaultValue="0"/>
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_musician"
        android:name="com.tsdc_vynils_app.app.ui.musicians.MusicianFragment"
        android:label="@string/title_artistas"
        tools:layout="@layout/fragment_musician" />

    <fragment
        android:id="@+id/navigation_collectors"
        android:name="com.tsdc_vynils_app.app.ui.collectors.CollectorsFragment"
        android:label="@string/title_coleccionistas"
        tools:layout="@layout/fragment_collectors" />
    <activity
        android:id="@+id/albumDetailsActivity"
        android:name="com.tsdc_vynils_app.app.ui.albumDetails.AlbumDetailsActivity"
        android:label="activity_album_details"
        tools:layout="@layout/activity_album_details"/>
</navigation>