<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tsdc_vynils_app.app.ui.home.HomeFragment"
        android:label="@string/title_albumes"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigate_albumDetails"
            app:destination="@id/navigate_albumDetails" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tsdc_vynils_app.app.ui.dashboard.DashboardFragment"
        android:label="@string/title_artistas"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tsdc_vynils_app.app.ui.notifications.NotificationsFragment"
        android:label="@string/title_coleccionistas"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigate_albumDetails"
        android:name="com.tsdc_vynils_app.app.ui.albumDetails.AlbumDetailsFragment"
        android:label="@string/title_album_details"
        tools:layout="@layout/fragment_album_details" >
        <argument
            android:name="albumId"
            app:argType="integer" />
    </fragment>
</navigation>