<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    app:navGraph="@navigation/nav_graph">


    <ScrollView
        android:id="@+id/contentAlbums"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        app:layout_behavior="com.google.android.material.bottomnavigation.BottomNavigationView$BottomNavigationViewBehavior"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/parentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_height="80dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iconImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ellipse_1_2" />

                <TextView
                    android:id="@+id/greatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/open_sans_semibold"
                    android:text="@string/great"
                    android:textColor="@color/colorSelected"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/greatTextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/newAlbum"
                android:textColor="@color/colorSelected"
                android:gravity="end"
                android:layout_gravity="end"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/allAlbumsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/allAlbums"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />









        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>